--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "react-router-dom": "^6.26.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
